# HeronTriangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  scene.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release_compilation.yml
include/resources/: robot_font.hpp
scripts/: linux_build_debug.sh  linux_build_release.sh  linux_clean.sh  linux_run_release.sh  linux_setup_project.sh  windows_build_debug.bat  windows_build_release.bat  windows_setup_project.bat
src/: Application.cpp  Application.hpp  Base.hpp  Camera.cpp  Camera.h  Camera.hpp  HeronPanel.hpp  ImGuiStyle.hpp  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Renderer.cpp  Renderer.h  Renderer.hpp  Saves.cpp  Saves.hpp  ScopedTimer.hpp  Screenshot.cpp  Screenshot.hpp  Shader.cpp  Shader.h  Shader.hpp  Triangle.cpp  Triangle.h  Triangle.hpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.h  heron.h  main.cpp  platform.hpp  saves.h  scoped_timer.h  style.h
src/Renderer/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
